--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ a {text-decoration: none;color: white;}body {background-color: #0A1427;}.date__c
 
 <body>
 
+  <main>
   <div class="date">
     <div class="container date__container">
       <div class="date__inner">
