--- a/a/index.html
+++ b/a/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+  <main>
   <div class="hero__container">
     <div class="hero__boxs">
       <div class="hero__topse">
@@ -141,6 +143,7 @@
       </div>
     </div>
   </div>
+</main>
   <!-- Modal -->
   <div id="registrationModal" class="homeModal" style="display: none">
     <div class="homeModalOverlay"></div>
