--- a/a/index.html
+++ b/a/index.html
@@ -36,7 +36,7 @@
       <div class="hero__card">
         <div class="card_bg"></div>
         <div class="hero__card__gradient">
-          <img class="speakerImg" src="./images/speakerThree.avif" loading="lazy" width="321" height="405"
+          <img class="speakerImg" src="./images/speakerThree.avif" loading="lazy" decoding="async" width="321" height="405"
             alt="speker" />
           <div class="speaker-info">
             <div class="hero__cards">Sherzod Mirkhodjaev</div>
@@ -50,13 +50,13 @@
           BEPUL QATNASHISH
         </button>
         <div class="hero__user">
-          <img class="hero__left-arrow" src="./images/arrow-left.svg" loading="lazy" alt="arrow left" />
+          <img class="hero__left-arrow" src="./images/arrow-left.svg" loading="lazy" decoding="async" alt="arrow left" />
 
           <p class="hero__user-title">
             BEPUL
           </p>
 
-          <img class="hero__right-arrow" src="./images/arrow-right.svg" loading="lazy" alt="arrow right" />
+          <img class="hero__right-arrow" src="./images/arrow-right.svg" loading="lazy" decoding="async" alt="arrow right" />
         </div>
         <div class="info__boxs">
 
@@ -132,13 +132,13 @@
           BEPUL QATNASHISH
         </button>
         <div class="hero__user">
-          <img class="hero__left-arrow" src="./images/arrow-left.svg" loading="lazy" alt="arrow left" />
+          <img class="hero__left-arrow" src="./images/arrow-left.svg" loading="lazy" decoding="async" alt="arrow left" />
 
           <p class="hero__user-title">
             BEPUL
           </p>
 
-          <img class="hero__right-arrow" src="./images/arrow-right.svg" loading="lazy" alt="arrow right" />
+          <img class="hero__right-arrow" src="./images/arrow-right.svg" loading="lazy" decoding="async" alt="arrow right" />
         </div>
       </div>
     </div>
