--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a {text-decoration: none;color: white;}body {background-color: #0A1427;}.date__c
         </div>
         <div class="center">
           <ul class="date__inner-list">
-            <h4 class="date__inner-list-title">Masterklassda siz:</h4>
+            <h2 class="date__inner-list-title">Masterklassda siz:</h2>
             <li class="date__inner-item">
               <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="4.00011" cy="4.00012" r="3.11111" fill="url(#paint0_radial_188_291)" />
@@ -121,7 +121,7 @@ a {text-decoration: none;color: white;}body {background-color: #0A1427;}.date__c
       </div>
 
       <div class="bonus_sec registerBtn">
-        <img src="./images/gift.avif" alt="gift" width="67" height="58" loading="lazy" class="gift__img">
+        <img src="./images/gift.avif" alt="gift" width="67" height="58" loading="lazy" decoding="async" class="gift__img">
         <div>
           <p class="bonus_sec-text">Siz uchun <b>Maxsus Yopiq Telegram</b> <br> kanalda <b>BEPUL</b> videodarsliklar bor!</p>
         </div>
