--- a/a/index.html
+++ b/a/index.html
@@ -62,7 +62,7 @@
 
           <div class="hero__nav">
             <p class="hero__nav__items">Ro’yxatdan o’tish uchun qolgan vaqt:</p>
-            <h1 id="time">01:58</h1>
+            <h1 id="timer">01:58</h1>
           </div>
           
         </div>
@@ -191,7 +191,7 @@
       </form>
     </div>
   </div>
-  <script defer src="./js/app.js"></script>
+  <script defer src="../js/app.js"></script>
 </body>
 
 </html>
