--- a/a/index.html
+++ b/a/index.html
@@ -69,7 +69,7 @@
         <div class="info__box">
           <h2 class="info__title">Masterklassda siz:</h2>
 
-          <ul class="hero__nav">
+          <ul class="hero__nav" style="align-items: start;">
             <li class="hero__nav__item">
               <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
