--- a/thankYou.html
+++ b/thankYou.html
@@ -26,7 +26,7 @@
     </p>
     <img src="images/arrow-bottom.svg" alt="arrow" class="arrow" loading="lazy" height="70" width="16" loading="lazy"
       decoding="async" />
-    <a href="https://t.me/+Vn7QxqxVoOM5MTVi" class="button-sub">OBUNA BO’LISH
+    <a href="https://t.me/Sherzod_Mirxodjayev_Massterklass" class="button-sub">OBUNA BO’LISH
       <img src="./images/tg.svg" alt="telegram" style="margin-right: -43px;display: flex;" loading="lazy"
         decoding="async">
     </a>
