--- a/a/index.html
+++ b/a/index.html
@@ -162,7 +162,7 @@
         </h1>
       </div>
       <form id="registrationForm" name="contact-form">
-        <div class="HomeFormRow">
+        <div class="HomeFormRow" style="display: none;">
           <label class="HomeFormRowLabel" for="name">Ismingizni kiriting:</label>
           <input class="HomeFormRowInput" type="text" id="name" name="name" autocomplete="name"
             placeholder="Ismingizni kiriting" />
