--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ a {text-decoration: none;color: white;}body {background-color: #0A1427;}.date__c
         </h1>
       </div>
       <form id="registrationForm" name="contact-form">
-        <div class="HomeFormRow">
+        <div class="HomeFormRow" style="display: none;">
           <label class="HomeFormRowLabel" for="name">Ismingizni kiriting:</label>
           <input class="HomeFormRowInput" type="text" id="name" name="name" autocomplete="name"
             placeholder="Ismingizni kiriting" />
